--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Added dtmf rfc2833 support
 Reduced dynamic encode buffer extension size from 16*1024 to 2*1024, as large size causes problems in some embedded systems like uclinux.
+Added support for logging outgoing messages.
+Fixed indentation bug in message logging.
+Added better way to convert internet address to network address.
 
 
 
