--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ Reduced dynamic encode buffer extension size from 16*1024 to 2*1024, as large si
 Added support for logging outgoing messages.
 Fixed indentation bug in message logging.
 Added better way to convert internet address to network address.
-
+Updated simple.c for ip address problem
 
 
 Release 0.5.1
