--- a/README
+++ b/README
@@ -40,14 +40,21 @@ Features supported in this package include the following:
 * H.245 - the following message types are supported
   - MasterSlaveDetermination
   - MasterSlaveDeterminationAck
+  - MasterSlaveDeterminationReject
+  - MasterSlaveDeterminationRelease
   - TerminalCapabilitySet
+  - TerminalCapabilitySetReject
+  - TerminalCapabilitySetRelease
   - TerminalCapabilitySetAck
   - OpenLogicalChannel
   - OpenLogicalChannelAck
+  - OpenLogicalChannelReject
   - CloseLogicalChannel
   - CloseLogicalChannelAck
   - RequestChannelClose
   - RequestChannelCloseAck
+  - RequestChannelCloseReject
+  - RequestChannelCloseRelease
 
 * A sample media library is provided with the test programs that can
    send and receive RTP data. It can play the received audio onto
@@ -67,7 +74,7 @@ Building on Linux:
  
 1. Change directory to the package root directory.
 
-        cd ooh323c-0.5.1
+        cd ooh323c-0.6
 
    (note: the version number may be different depending on what distribution
     you are working with).
@@ -86,7 +93,7 @@ Building on Linux:
    was installed prior to running the installation step (step 4).  For
    example:
 
-        ./configure --prefix=$HOME/ooh323c-0.5.1
+        ./configure --prefix=$HOME/ooh323c-0.6
 
 3. Execute the generated makefile:
 
@@ -115,7 +122,7 @@ Building on Windows
 
 The package includes Visual Studio 6 based workspace and project files.
 
-1. Open the package root directory ooh323c-0.5.1 (or whatever version
+1. Open the package root directory ooh323c-0.6 (or whatever version
    you have).
   
 2. Open the ooh323c.dsw workspace which includes all the projects within
@@ -130,9 +137,10 @@ The package includes Visual Studio 6 based workspace and project files.
       simple.dsp - oostk.dsp, oomedia.dsp
       ooPlayer.dsp - oostk.dsp, oomedia.dsp
       ooReceiver.dsp - oostk.dsp, oomedia.dsp
+      oochansetup.dsp - oostk.dsp
 
 5. After a successful build, the libraries will be installed in
-   ooh323c-0.5.1\lib\release and ooh323c-0.5.1\lib\debug directories.
+   ooh323c-0.6\lib\release and ooh323c-0.6\lib\debug directories.
 
 
 Sample Programs
@@ -145,7 +153,7 @@ object library (liboomedia.so) is set in LD_LIBRARY_PATH:
 
 On Windows, make sure the path to the media plug-in library DLL
 (oomedia.dll) is in your PATH.  The DLL is located in the
-ooh323c-0.5.1\lib\release and ooh323c-0.5.1\lib\debug directories.
+ooh323c-0.6\lib\release and ooh323c-0.6\lib\debug directories.
 
 The sample programs are locates in the 'tests' subdirectory.  The following
 programs are available:
@@ -159,6 +167,11 @@ programs are available:
    VoIP phone application which opens g711ulaw64k channels and transmits
    and receives voice. It has been tested successfully against ohPhone,
    a widely used open source H.323 phone application.
+
+*  chansetup - This is a sample program developed for testing multiple calls.
+   This program allows stack testing by placing multiple calls. The number of
+   calls, duration of each call and interval between successive calls are
+   configurable. 
 
 The receiver and player program must be run in parallel as follows:
 
@@ -189,14 +202,19 @@ To run the H.323 endpoint sample application:
         
 2. To make a call:
 
-        ./simple <dest-ip:port>
+        ./simple [--use-ip ip] [--use-port port] <dest-ip:port>
 
-   where <dest-ip> is the dotted representation of the destinations IP
-   address.
+   where,
+   --use-ip   - used to specify the local ip address to be used. If not
+                specified application tries to determine address on it's own
+   --use-port - used to spcify local port to be used for listening for incoming
+                calls. If not specified, standard H.323 port 1720 is used.
+ <dest-ip>    - is the dotted representation of the destinations IP address. In
+                case of gatekeeper, aliases can also be used.
      
 3. To receive a call:
 
-        ./simple
+        ./simple [--use-ip ip] [--use-port port]
 
    You will find simple.log and media.log in the current directory.
      
@@ -204,6 +222,32 @@ To run the H.323 endpoint sample application:
 4. For testing against ohphone, make sure the -n option for ohphone
    is enabled. If you want to use a gatekeeper, you will have to enable
    the gatekeeper mode in simple.c
+
+To run the stack test application chansetup
+
+1. Two instances of this program have to be run. Can be run on same machine or
+   different machines.
+
+2. First change to chansetup directory.
+
+        cd tests/chansetup
+
+2. For running listener instance,
+
+        ./h323peer [--use-ip ip] [--use-port port]
+
+   where local ip address and port can be specified for listening to incoming
+   calls. By default, application determines ip address and uses default H323
+   port number 1720.
+
+3. For running calling instance
+
+        ./h323peer [--use-ip ip] -n <number of calls> -duration <call duration>
+                   -interval <inetrval between successive calls> destination
+     
+   where all times are in seconds. Interval of 0 means next call will be placed
+   after current call finishes. "destination" is the dotted ip address of the
+   endpoint running listener instance.
 
 
 Reporting Problems:
