--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Release xx.aa
+1. Added support for G711 alaw, G729, G729a, G723.1, GSM, H.263 codecs
+2. Better callback support. Two levels of callbacks, viz., at call level
+   (examples onIncomingCall, onCallEstablished, onCallCleared) and at message
+   level(examples onReceivedSetup, onBuiltSetup). The call level callbacks
+   provide applications high level call events where as message level callbacks
+   allow applications to do finer things like additional processing of incoming
+   messages or modify outgoing messages before they are sent.
+3. Improved sample telephony application.
+4. Support for Call Forward using Facility UUIE.
+5. Improved documentation.
+6. Code improvement and bug fixes.
+        
 Release 0.6
 1. Added support for timers for various messages.
 2. Added support for various Reject/Release messages.
@@ -60,11 +73,11 @@ Release 0.4:
 
 Release 0.3.1:
 1. Fixes bug reported on source forge as request Id: 1079205
-   Also fixes other many unknown bug related with ooh245.c & ooq931.c function calls.
-
+   Also fixes other many unknown bug related with ooh245.c & ooq931.c function
+   calls.
 2. Fixes bug reported on source forge as request Id:1078936
-   Host name can be longer than 20 length, Increased the capacity upto 100 character
-
+   Host name can be longer than 20 length, Increased the capacity upto 100
+   character
 3. Fixed problem with pdf documents
 
 
