--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright (C) 2004 by Objective Systems, Inc.
+Copyright (C) 2004-2005 by Objective Systems, Inc.
 
 Objective Open H.323 README
 
@@ -7,202 +7,246 @@ Introduction
 Thank you for downloading the Objective Open H.323 software. This
 package contains a simple H.323 stack developed in C.  The ASN.1
 messaging code was developed using the Objective Systems ASN1C
-compiler to implement the H.225, H.245, and H.450 specifications. 
-Then additional code was developed which makes use of the compiler
-generated code for presenting a comparatively high level stack API.
+compiler to implement the core H.323 specifications (H.225, H.235,
+and H.245).  Additional code was then developed which makes use of
+the compiler generated code for presenting a comparatively high level
+stack API.
 
 The media part, which includes RTP and audio support, is implemented
-as a plugin. The media plugin uses G.711 code made available by Sun
-Microsystems to the open source community. Please refer to their
+as a sample library. The media library uses G.711 code made available
+by Sun Microsystems to the open source community. Please refer to their
 license for more details.
+
+
+Features
 
 Features supported in this package include the following:
 
-1. At the H.225 level, the framework allows the exchange of basic
-   Q.931 signalling messages for call setup.
+* H.225/Q.931 - the following message types are supported (including
+  support for FastStart and H.245 tunneling):
+  - Setup
+  - Connect
+  - Call Proceeding
+  - Alerting
+  - Facility
+  - ReleaseComplete
 
-2. At the H.245 level, the following messages are supported
- -   MasterSlaveDetermination
- -   MasterSlaveDeterminationAck
- -   TerminalCapabilitySet
- -   TerminalCapabilitySetAck
- -   OpenLogicalChannel
- -   OpenLogicalChannelAck
- -   CloseLogicalChannel
- -   CloseLogicalChannelAck
- -   RequestChannelClose
- -   RequestChannelCloseAck
+* H.225/RAS - the following message types are supported
+  - GateKeeperRequest / Response
+  - RegistrationRequest / Response
+  - AdmissionRequest / Response
+  - DisengageRequest / Response
 
-   Note that "supported" means that these items have a sample
-   implementation. However, other message types such as RAS can be
-   easily supported by following the same implementation pattern.
+* H.245 - the following message types are supported
+  - MasterSlaveDetermination
+  - MasterSlaveDeterminationAck
+  - MasterSlaveDeterminationReject
+  - MasterSlaveDeterminationRelease
+  - TerminalCapabilitySet
+  - TerminalCapabilitySetReject
+  - TerminalCapabilitySetRelease
+  - TerminalCapabilitySetAck
+  - OpenLogicalChannel
+  - OpenLogicalChannelAck
+  - OpenLogicalChannelReject
+  - CloseLogicalChannel
+  - CloseLogicalChannelAck
+  - RequestChannelClose
+  - RequestChannelCloseAck
+  - RequestChannelCloseReject
+  - RequestChannelCloseRelease
 
-3. Plugin architecture for RTP and media support. Objective systems
-   has provided a sample plugin which can send/receive RTP data. It
-   can also play the received audio onto speakers and can collect
-   audio from Mic for transmitting as rtp stream. Apart from this,
-   it also supports transmitting audio files over RTP channel. The
-   windows version supports 16 bit, 8000 samples per second wave
-   file where as linux version supports raw 16 bit audio data file.
-
-4. Sample H.323 based audio file player and receiver programs are
-   provided with this package.
-
-5. This package also contains a sample H.323 VoIP phone application
-   which opens g711ulaw64k channels and transmits and receives voice.
-   It is tested successfully against ohPhone, a widely used open source
-   H.323 phone application.
+* A sample media library is provided with the test programs that can
+   send and receive RTP data. It can play the received audio onto
+   speakers and can collect audio from a microphone for transmission
+   as an RTP stream. This library also supports transmitting audio files
+   over the RTP channel. The Windows version supports 16 bit, 8000 samples
+   per second wave file whereas the Linux version supports raw 16 bit audio
+   data files.
 
 
 Getting Started
-   This section describes how to build the complete package on linux and
-   windows systems respectively.
+
+This section describes how to build the complete package on Linux and
+Windows systems respectively.
   
-   Building on Linux:
-   ------------------
+Building on Linux:
  
-   1. Change directory to package root directory
-      ooh323c-x.y. (x.y indicate the release version of the stack)
+1. Change directory to the package root directory.
 
-   2. To generate make files:
+        cd ooh323c-xx.aa
 
-         >./configure --prefix=<install-dir>
+   (note: the version number may be different depending on what distribution
+    you are working with).
 
-      The configure script will generate the requred makefiles. The
-      <install-dir> is where the libraries will be installed. By default
-      the libraries are installed in /usr/local/lib. The static and shared
-      versions of h323 stack library(liboostk) and media plug-in library
-      (liboomedia) are installed.
+2. Generate the makefiles:
 
+        ./configure --prefix=<install-dir>
 
-   3. To build the complete mackage, run makefile in the package root directory,
-      ooh323c-x.y
-         >make
-      This will build all the libraries and sample applications.
+   The configure script will generate the requred makefiles. The
+   <install-dir> is where the libraries will be installed. By default
+   the libraries are installed in /usr/local/lib. Static and shared
+   versions of all of the different object libraries are installed.
+
+   Note that if wish to use the libraries in your home directory, it is
+   necessary to set <install-dir> to the location in which the package
+   was installed prior to running the installation step (step 4).  For
+   example:
+
+        ./configure --prefix=$HOME/ooh323c-xx.aa
+
+3. Execute the generated makefile:
+
+        make
+
+   This will build all the libraries and sample applications.  By default,
+   an optimized version is built.  This can also be done explciitly by
+   executing the following make command:
   
-      To build optimized version:
-         >make opt 
+        make opt
 
-      To build debug version:
-         >make debug
+   If you wish to build a debug version, execute the following command:
 
-   4. To install libraries, from package root directory run
+        make debug
 
-         >make install
+4. To install the libraries, execute the following command:
 
-   5. To run examples, make sure that all the libraries(liboostk.a,
-      liboomedia.so) are in your LD_LIBRARY_PATH. The libraries are located
-      in <install-dir>/lib directory.
+        make install
 
-      Now run the receiver from command prompt:
+   Note that it is necessary to do this even if the libraries are to be
+   used in your home directory.  If this is the case, configure must have
+   been run using --prefix as described in step 2.
+
+
+Building on Windows
+
+The package includes Visual Studio 6 based workspace and project files.
+
+1. Open the package root directory ooh323c-xx.aa (or whatever version
+   you have).
   
-        >./ooReceiver
-  
-      A log file will be created in the ooh323c-x.y/tests/receiver
-      directory (ooReceiver.log). Also, the log file for the media plugin will
-      be created in the same directory (media.log).
+2. Open the ooh323c.dsw workspace which includes all the projects within
+   the package.
 
-     Now run the player from command prompt:
-  
-        >./ooPlayer space.raw
-   
-      A log file will be created in the ooh323c-x.y/tests/player
-      directory (ooPlayer.log). Also, a log file for the media plug-in will be
-      created in the same directory (media.log).
+3. You can now do a batch build to build the complete package.
 
-   6. To run the H.323 endpoint sample application:
-      Make sure all the libraries(liboostk.a, liboomedia.so) are in your
-      LD_LIBRARY_PATH path. The libraries are located in <install-dir>/lib
-      directory.
+4. To build individual projects, dependencies are as follows:
 
-      To run the telephony application:
-      From package root directory ooh323c-x.y
-         >cd tests/simple
-        
-      To make a call:
-         >./simple <dest-ip>
-      where <dest-ip> is the dotted representation of the destinations IP
-      address.
-     
-      To receive a call:
-         >./simple
-
-      You will find simple.log and media.log in the current directory.
-     
-
-   7. For testing against ohphone, make sure -T -F -n options for ohphone
-      are enabled. This ensures that ohphone does not use tunneling and
-      faststart, which we do not support in this release.
-
-
-   Building on Windows
-   -------------------
-
-   The package includes Visual Studio 6 based workspace and project files.
-
-   1. Open the package root directory ooh323c-x.y, where x.y indicate the
-      release number.
-  
-   2. Open the ooh323c.dsw workspace which includes all the projects within
-      the package.
-
-   3. You can now do a batch build to build the complete package.
-
-   4. To build individual projects, dependencies are as follows:
       oostk.dsp - none
       oomedia.dsp - none
       simple.dsp - oostk.dsp, oomedia.dsp
       ooPlayer.dsp - oostk.dsp, oomedia.dsp
       ooReceiver.dsp - oostk.dsp, oomedia.dsp
+      oochansetup.dsp - oostk.dsp
 
-   5. After a successful build the libraries will be installed in
-      ooh323c-x.y\lib\release and ooh323c-x.y\lib\debug directories.
+5. After a successful build, the libraries will be installed in
+   ooh323c-xx.aa\lib\release and ooh323c-xx.aa\lib\debug directories.
 
-   6. To run examples, make sure that the media plug-in library oomedia.dll
-      is in your PATH. The libraries is located in
-      ooh323c-x.y\lib\release and  ooh323c-x.y\lib\debug directories.
 
-      Now run the receiver from command prompt:
-      From package root directory ooh323c-x.y
+Sample Programs
 
-        >cd tests\receiver\Release
-        >ooReceiver.exe
-  
-      A log file will be created in the current directory (ooReceiver.log).
-      Also, a log file for the media plugin will be created in the same
-      directory (media.log).
+To run the sample programs, first make sure the path to the media shared
+object library (liboomedia.so) is set in LD_LIBRARY_PATH:
 
-      Now run the player from command prompt:
-      From package root directory ooh323c-x.y
-         >cd tests\player\Release
-         >ooPlayer.exe states.WAV
-   
-      A log file will be created in the current directory (ooReceiver.log).
-      Also, a log file for the media plugin will be created in the same
-      directory (media.log).
-  
-   7. To run the sample telephony endpoint application, again ensure that
-      the media plug-in library oomedia.dll is in your PATH. The library
-      is located in ooh323c-x.y\lib\release and  ooh323c-x.y\lib\debug
-      directories.      
+        LD_LIBRARY_PATH=<install-dir>/lib
+        export LD_LIBRARY_PATH
+
+On Windows, make sure the path to the media plug-in library DLL
+(oomedia.dll) is in your PATH.  The DLL is located in the
+ooh323c-xx.aa\lib\release and ooh323c-xx.aa\lib\debug directories.
+
+The sample programs are locates in the 'tests' subdirectory.  The following
+programs are available:
+
+*  receiver - an audio receiver program that will listen for incoming
+   requests and then play audio as it is received.
+
+*  player - an audio player program that will play a sample audio file.
+
+*  simple - an H.323 endpoint sample program.  This is a sample H.323
+   VoIP phone application which opens g711ulaw64k channels and transmits
+   and receives voice. It has been tested successfully against ohPhone,
+   a widely used open source H.323 phone application and NetMeeting.
+
+*  chansetup - This is a sample program developed for testing multiple calls.
+   This program allows stack testing by placing multiple calls. The number of
+   calls, duration of each call and interval between successive calls are
+   configurable. 
+
+The receiver and player program must be run in parallel as follows:
+
+1. Run receiver first to listen for incoming connections:
+
+        cd tests/receiver
+        ./ooReceiver
+
+   A log file will be created in the tests/receiver directory
+   (ooReceiver.log). Also, the log file for the media plugin will
+   be created in the same directory (media.log).
+
+2. Run the player:
+
+        cd ../player
+        ./ooPlayer space.raw
+
+   A log file will be created in the tests/player directory
+   (ooPlayer.log). Also, a log file for the media plug-in will be
+   created in the same directory (media.log).
+
+
+To run the H.323 endpoint sample application:
+
+1. Set working directory to the simple test directory:
+
+        cd tests/simple
+
+2. To see the usage information including various options:
+        ./simple OR ./simple --help
+
+3. To make a call:
+
+        ./simple [options]  <remote>
+
+   where,
+ <remote>    -  is the dotted representation of the destinations IP address. In
+                case of gatekeeper, aliases can also be used.
      
-      To run the telephony application:
-      From package root directory ooh323c-x.y
-         >cd tests\simple\Release
-        
-      To make a call:
-         >simple <dest-ip>
-      where <dest-ip> is the dotted representation of the destinations IP
-      address.
+4. To receive a call:
+
+        ./simple [options] --listen
+
+   You will find simple.log and media.log in the current directory.
      
-      To receive a call:
-         >simple.exe
 
-      You will find simple.log and media.log in the current directory.
+5. For testing against ohphone, make sure the -n option for ohphone
+   is enabled. If you want to use a gatekeeper, you will have to enable
+   the gatekeeper mode in simple.c
 
-   8. For testing against ohphone, make sure -T -F -n options for ohphone
-      are enabled. This ensures that ohphone does not use tunneling and
-      faststart, which we do not support in this release.
+To run the stack test application chansetup
+
+1. Two instances of this program have to be run. Can be run on same machine or
+   different machines.
+
+2. First change to chansetup directory.
+
+        cd tests/chansetup
+
+2. For running listener instance,
+
+        ./h323peer [--use-ip ip] [--use-port port]
+
+   where local ip address and port can be specified for listening to incoming
+   calls. By default, application determines ip address and uses default H323
+   port number 1720.
+
+3. For running calling instance
+
+        ./h323peer [--use-ip ip] -n <number of calls> -duration <call duration>
+                   -interval <inetrval between successive calls> destination
+     
+   where all times are in seconds. Interval of 0 means next call will be placed
+   after current call finishes. "destination" is the dotted ip address of the
+   endpoint running listener instance.
 
 
 Reporting Problems:
