--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Release xx.aa
-1. Bug Fixes and interop issues
-2. Performance improvement
+1. Lot's of interop issues solved.
+2. Bug Fixes and performance improvement
 
 
 Release 0.7.1
