--- a/README
+++ b/README
@@ -178,16 +178,28 @@ The receiver and player program must be run in parallel as follows:
 1. Run receiver first to listen for incoming connections:
 
         cd tests/receiver
-        ./ooReceiver
+        ./ooReceiver [--use-ip <ip>] [--use-port <port>]
+
+   where, [--use-ip <ip>] and [--use-port <port>] options are used to specify
+   local ip address and port number. By deafault, receiver application tries
+   to determine ip address on it's own and uses standard H.323 port 1720.
 
    A log file will be created in the tests/receiver directory
    (ooReceiver.log). Also, the log file for the media plugin will
    be created in the same directory (media.log).
 
 2. Run the player:
+   Note: Player supports wave file format on windows and raw audio format on
+   linux.
 
         cd ../player
-        ./ooPlayer space.raw
+        ./ooPlayer --audio-file space.raw [--use-ip <ip>] (linux)
+        ./ooPlayer --audio-file states.wav [--use-ip <ip>] (win32)
+       
+
+   where, --audio-file is used to specify the audio file to be played.
+   [--use-ip <ip>] is used to specify local ip address. By deafault, player
+   application tries to determine ip address on it's own.space.raw
 
    A log file will be created in the tests/player directory
    (ooPlayer.log). Also, a log file for the media plug-in will be
@@ -251,7 +263,8 @@ To run the stack test application chansetup
 
 Reporting Problems:
 
-Report problems you encounter by sending E-mail to support@obj-sys.com.
+Report problems you encounter by sending E-mail to
+ooh323c-devel@lists.sourceforge.net.
 
 If you have any further questions or comments on what you would like to
 see in the product or what is difficult to use or understand, please
